manifests/matomo-1.3.1.tgz-manifest.yaml
---
# Source: matomo/charts/mysql/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-mysql
  namespace: default
  labels:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: mysql-0.1.0
  annotations:
spec:
  type: ClusterIP
  ports:
  - name: mysql
    port: 3306
    targetPort: mysql
  selector:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/instance: my-release
---
# Source: matomo/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-matomo
  labels:
    app.kubernetes.io/name: matomo
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: matomo-1.3.1
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/name: matomo
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: app
---
# Source: matomo/charts/mysql/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-mysql
  labels:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: mysql-0.1.0
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: mysql
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mysql
        app.kubernetes.io/instance: my-release
    spec:
      serviceAccountName: default
      containers:
      - name: my-release-mysql
        image: "mysql:8.0.22"
        imagePullPolicy: "IfNotPresent"
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        ports:
        - name: mysql
          containerPort: 3306
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - "mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - "mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}"
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: my-release-mysql
---
# Source: matomo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-matomo
  labels:
    app.kubernetes.io/name: matomo
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: matomo-1.3.1
    app.kubernetes.io/component: app
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: matomo
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: matomo
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/component: app
      annotations:
        checksum/config: f6104537544f9491a26b79523bfd5a788346a59c1910e43ef5c3f7ed1a1d86f
        checksum/secret: 90b51695f9bb7248b767a1a8327bd29e801802e3391d6cbb90f36d40d2b7a7b
    spec:
      containers:
        - name: matomo
          image: "t3nde/matomo:4.3.1-fpm-alpine"
          imagePullPolicy: IfNotPresent
          ports:
            - name: fpm
              containerPort: 9000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
              subPath: 
            - name: html-files
              mountPath: /var/www/html
        - name: nginx
          image: "nginx:1.18.0-alpine"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /matomo.php
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 1
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /matomo.php
              port: http
            initialDelaySeconds: 0
            timeoutSeconds: 5
            periodSeconds: 25
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: matomo.conf
            - name: html-files
              mountPath: /var/www/html
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: my-release-matomo
        - name: config
          configMap:
            name: my-release-matomo
        - name: html-files
          emptyDir: {}
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                topologyKey: "kubernetes.io/hostname"
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: matomo
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/component: app
---
# Source: matomo/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-release-matomo
  labels:
    app.kubernetes.io/name: matomo
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: matomo-1.3.1
spec:
  rules:
    - host: matomo.local
      http:
        paths:
          - path: /
            backend:
              serviceName: my-release-matomo
              servicePort: http
